--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -576,6 +576,16 @@ config TARGET_MX6UL_14X14_LPDDR2_ARM2
         bool "Support mx6ul_14x14_lpddr2_arm2"
         select CPU_V7
 
+config TARGET_MYIMX6EK200
+	bool "Support myimx6ek200"
+	select CPU_V7
+	select SUPPORT_SPL
+
+config TARGET_MYIMX6EK314
+	bool "Support myimx6ek314"
+	select CPU_V7
+	select SUPPORT_SPL
+
 config TARGET_GW_VENTANA
 	bool "Support gw_ventana"
 	select CPU_V7
@@ -896,6 +906,7 @@ source "board/logicpd/imx27lite/Kconfig"
 source "board/logicpd/imx31_litekit/Kconfig"
 source "board/maxbcm/Kconfig"
 source "board/mpl/vcma9/Kconfig"
+source "board/myzr/myimx6/Kconfig"
 source "board/olimex/mx23_olinuxino/Kconfig"
 source "board/palmld/Kconfig"
 source "board/palmtc/Kconfig"
