Import from jwj's mx6solo build tree
Signed-off-by: 黄华锋 <varphone@qq.com>

--- a/cpu/arm_cortexa8/mx6/Makefile
+++ b/cpu/arm_cortexa8/mx6/Makefile
@@ -28,6 +28,7 @@ include $(TOPDIR)/config.mk
 LIB	= $(obj)lib$(SOC).a
 
 COBJS	= interrupts.o generic.o iomux-v3.o timer.o
+COBJS-$(CONFIG_UBOOT_LOGO_ENABLE) += ipu.o
 COBJS += $(COBJS-y)
 
 SRCS	:= $(SOBJS:.o=.S) $(COBJS:.o=.c)
