--- a/board/freescale/common/Makefile
+++ b/board/freescale/common/Makefile
@@ -38,6 +38,9 @@ COBJS-${CONFIG_PQ_MDS_PIB}	+= pq-mds-pib.o
 COBJS-${CONFIG_ID_EEPROM}	+= sys_eeprom.o
 COBJS-${CONFIG_FSL_SGMII_RISER}	+= sgmii_riser.o
 COBJS-${CONFIG_VIDEO_MX5}	+= fsl_bmp_600x400.o fsl_bmp_reversed_600x400.o
+#add by xym start
+#COBJS-${CONFIG_UBOOT_LOGO_ENABLE}	+= logo_800x480_24bpp.o
+#add by xym end
 
 COBJS-${CONFIG_MPC8541CDS}	+= cds_pci_ft.o
 COBJS-${CONFIG_MPC8548CDS}	+= cds_pci_ft.o
